--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="added_to_shopping_list">Selected ingredients have been added to the Shopping List</string>
     <string name="recipes_limit">Please, buy Premium to add more than 15 recipes</string>
     <string name="google">Google</string>
+    <string name="premium">Premium</string>
 </resources>
