--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,8 @@
     <string name="troubles">Have problems or suggestions?</string>
     <string name="added_to_shopping_list">Selected ingredients have been added to the Shopping List</string>
     <string name="recipes_limit">Please, buy Premium to add more than 15 recipes</string>
-    <string name="google">Google</string>
-    <string name="premium">Premium</string>
+    <string name="google" translatable="false">Google</string>
+    <string name="premium" translatable="false">Premium</string>
+    <string name="rate_app">Rate ChefBook</string>
+    <string name="rate_gratitude">Thanks for review!</string>
 </resources>
