Shopping List improved

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -102,4 +102,5 @@
     <string name="recipes_limit">Калі ласка, купіце Прэміум, каб дадаць больш за 15 рэцэптаў</string>
     <string name="rate_gratitude">Дзякуй за водгук!</string>
     <string name="rate_app">Стаўка ChefBook</string>
+    <string name="type_something">Напішыце што-небудзь…</string>
 </resources>
