--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -102,4 +102,5 @@
     <string name="rate_gratitude">검토 주셔서 감사합니다!</string>
     <string name="rate_app">속도 ChefBook</string>
     <string name="_15_min">15 분</string>
+    <string name="type_something">뭔가 쓰기…</string>
 </resources>
