--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -102,4 +102,5 @@
     <string name="recipes_limit">Будь ласка, купіть Преміум, щоб додати більше 15 рецептів</string>
     <string name="rate_gratitude">Дзякуй за водгук!</string>
     <string name="rate_app">Оцінити ChefBook</string>
+    <string name="type_something">Напишіть що-небудь…</string>
 </resources>
