--- a/android/core/src/main/res/values-ru/strings.xml
+++ b/android/core/src/main/res/values-ru/strings.xml
@@ -5,6 +5,7 @@
     <string name="common_general_cancel">Отмена</string>
     <string name="common_general_add">Добавить</string>
     <string name="common_general_remove">Удалить</string>
+    <string name="common_general_next">Далее</string>
     <string name="common_general_email">Почта</string>
     <string name="common_general_password">Пароль</string>
     <string name="common_general_search">Поиск</string>
@@ -112,6 +113,7 @@
     <string name="common_general_lock">Заблокировать</string>
     <string name="common_general_unlock">Разблокировать</string>
     <string name="common_general_something_went_wrong">Что-то пошло не так…</string>
+    <string name="common_general_eula">Пользовательское соглашение</string>
 
     <string name="common_general_app_error">Ошибка приложения</string>
     <string name="common_general_app_error_local_user">Для этого действия необходим онлайн-профиль</string>
@@ -120,10 +122,10 @@
 
     <string name="common_general_server_error">Ошибка сервера</string>
     <string name="common_general_server_error_old_version">Пожалуйста, обновите приложение</string>
-    <string name="common_general_server_error_invalid_credentials">Неверно указана почта или пароль</string>
-    <string name="common_general_server_error_profile_not_activated">Пожалуйста, сначала активируйте профиль</string>
+    <string name="common_general_server_error_invalid_credentials">Неверно указан логин или пароль</string>
+    <string name="common_general_server_error_profile_not_activated">Профиль не активирован</string>
     <string name="common_general_server_error_profile_blocked">Профиль заблокирован</string>
-    <string name="common_general_server_error_profile_exists">Профиль с указанной почтой уже существует</string>
+    <string name="common_general_server_error_profile_exists">Профиль уже существует</string>
     <string name="common_general_server_error_access_denied">Доступ запрещен</string>
     <string name="common_general_server_error_authorization_failed">Авторизация неудачна</string>
     <string name="common_general_server_error_big_file">Загружаемый файл слишком большой</string>
