--- a/android/features/auth/src/main/res/values-ru/strings.xml
+++ b/android/features/auth/src/main/res/values-ru/strings.xml
@@ -1,10 +1,12 @@
 <resources>
 
+    <string name="common_auth_screen_nickname_or_email">Никнейм или почта</string>
     <string name="common_auth_screen_sign_in">Войти</string>
     <string name="common_auth_screen_sign_up">Зарегистрироваться</string>
+    <string name="common_auth_screen_new_password">Новый пароль</string>
     <string name="common_auth_screen_forgot_password">Забыли пароль?</string>
     <string name="common_auth_screen_not_member">Еще не участник?</string>
-    <string name="common_auth_screen_already_member">Уже участник?</string>
+    <string name="common_auth_screen_already_member">Уже участник</string>
     <string name="common_auth_screen_repeat_password">Повторите пароль</string>
     <string name="common_auth_screen_reset_password">Сбросить пароль</string>
     <string name="common_auth_screen_invalid_email">Введите корректную почту</string>
@@ -14,10 +16,10 @@
     <string name="common_auth_screen_number_password">Пароль должен содержать хотя бы 1 цифру</string>
     <string name="common_auth_screen_space_password">Пароль не должен содержать пробел</string>
     <string name="common_auth_screen_password_mismatch">Пароли не совпадают</string>
-    <string name="common_auth_screen_sign_in_success">Успешный вход</string>
-    <string name="common_auth_screen_sign_up_success">Ссылка для подтверждения регистрации была отправлена на указанную почту</string>
-    <string name="common_auth_screen_reset_password_success">Ссылка для сброса пароля была отправлена на указанную почту</string>
-    <string name="common_auth_screen_sign_in_google_failure">Не удалось войти через Google</string>
-    <string name="common_auth_screen_unable_send_email">Не удается отправить письмо на указанную почту. Пожалуйста, повторите попытку</string>
+    <string name="common_auth_screen_agreement">Используя приложение, вы принимаете пользовательское соглашение</string>
+    <string name="common_auth_screen_activation_code">Введите код из письма</string>
+    <string name="common_auth_screen_profile_activated">Профиль активирован</string>
+    <string name="common_auth_screen_password_reset_mail">Если профиль существует, ссылка для сброса пароля отправлена на почту. Откройте ее.</string>
+    <string name="common_auth_screen_password_reset">Пароль сброшен</string>
 
 </resources>
