--- a/android/features/community/recipes/src/main/res/values/strings.xml
+++ b/android/features/community/recipes/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="common_community_recipes_content_screen_public_recipe">public recipe</string>
     <string name="common_community_recipes_content_screen_change_parameters_hint">Try to change the request parameters</string>
 
+    <string name="common_community_recipes_filter_screen_from">From</string>
+    <string name="common_community_recipes_filter_screen_to">To</string>
     <string name="common_community_recipes_filter_screen_specificities">Specificities</string>
     <string name="common_community_recipes_filter_screen_high_rating">High rating</string>
     <string name="common_community_recipes_filter_screen_by_cooking_time">By cooking time</string>
