--- a/android/features/shopping-list/control/src/main/res/values-ru/strings.xml
+++ b/android/features/shopping-list/control/src/main/res/values-ru/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="common_shopping_list_screen_personal">Личный</string>
+    <string name="common_shopping_list_screen_empty_here">Тут пусто</string>
 
 </resources>
