--- a/android/features/shopping-list/control/src/main/res/values/strings.xml
+++ b/android/features/shopping-list/control/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
     <string name="common_shopping_list_screen_personal">Personal</string>
+    <string name="common_shopping_list_screen_empty_here">It\'s empty here</string>
 
 </resources>
